# smart-serde-default

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: lib.rs  smart_serde_default.rs
